tests/types/result/errors/test_err_non_enum_error_type.sushi
# Tests error for non-enum error type
# EXPECT_ERROR_CODE: CE2084

struct MyError:
    i32 code

fn test_func() i32 | MyError:
    return Result.Ok(42)

fn main() i32:
    return Result.Ok(0)
